syntax = "proto3";

package protogrpc;

option go_package = "pb/protogrpc";

import "google/api/annotations.proto";

message Request {
  int32 id = 1;
  string question = 2;
  string answer = 3;
  string wrong_answer_1 = 4;
  string wrong_answer_2 = 5;
  string wrong_answer_3 = 6;
  string created_at = 7;
  string updated_at = 8;
}

message ResponseOne {
  int32 code = 1;
  Request data = 2;
}

message Response {
  int32 code = 1;
  repeated Request data = 2;
}

message Id { int32 id = 1; }

message Empty {}

service QuestionsGrpc {
  rpc GetQuestions(Empty) returns (Response) {
    option (google.api.http) = {
      get : "/api/questions"
    };
  };
  rpc GetQuestion(Id) returns (ResponseOne) {
    option (google.api.http) = {
      get : "/api/question/{id}"
    };
  };
}